# fltn

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: continuous-integration-workflow.yml  release-workflow.yml
src/: color.rs  deserializer.rs  format.rs  input.rs  main.rs  printer.rs
